Update project configuration for Minecraft 26.1.2 and Java 25 compatibility